force-app/main/default/objects/Service_Request_SLA__c/Service_Request_SLA__c.object-meta.xml
<CustomObject>
    <label>Service Request SLA</label>
    <nameField>
        <displayFormat>SLA - {00000}</displayFormat>
        <label>Service Request SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request SLA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>