force-app/main/default/objects/Service_Request_SLA__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Pre registration</fullName>
            </value>
            <value>
                <fullName>Booking related</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Title Deed</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Supplier Details</fullName>
            </value>
            <value>
                <fullName>Business Proposal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Home Orientation</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Construction Update</fullName>
            </value>
            <value>
                <fullName>Compensations</fullName>
            </value>
            <value>
                <fullName>Snag Rectification</fullName>
            </value>
            <value>
                <fullName>Payment Completion Certificate</fullName>
            </value>
            <value>
                <fullName>DEWA</fullName>
            </value>
            <value>
                <fullName>Warranty Letters</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Unit Related</fullName>
            </value>
            <value>
                <fullName>Service Charges</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>MD/CM office escalation</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Escrow Details</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>