force-app/main/default/objects/Service_Request_SLA__c/fields/SLA_in_days__c.field-meta.xml
<CustomField>
    <fullName>SLA_in_days__c</fullName>
    <label>SLA (in days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>