force-app/main/default/objects/Service_Request_SLA__c/fields/SR_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>SR_Sub_Category__c</fullName>
    <label>SR Sub - Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Email</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>No Contact Email</fullName>
            </value>
            <value>
                <fullName>Customer Information Update</fullName>
            </value>
            <value>
                <fullName>SPA Received</fullName>
            </value>
            <value>
                <fullName>SPA Signed</fullName>
            </value>
            <value>
                <fullName>Issue SPA (registered project)</fullName>
            </value>
            <value>
                <fullName>Issue SPA (unregistered project)</fullName>
            </value>
            <value>
                <fullName>Loss of SPA</fullName>
            </value>
            <value>
                <fullName>Changes in customer detail</fullName>
            </value>
            <value>
                <fullName>Technical error</fullName>
            </value>
            <value>
                <fullName>Documents expired</fullName>
            </value>
            <value>
                <fullName>Upgrade of the unit</fullName>
            </value>
            <value>
                <fullName>Oqood Request</fullName>
            </value>
            <value>
                <fullName>Non RERA registered project</fullName>
            </value>
            <value>
                <fullName>NOC related - blocked unit</fullName>
            </value>
            <value>
                <fullName>Expired customer docs</fullName>
            </value>
            <value>
                <fullName>DLD fees reallocation issue (DP to DLD and vice versa)</fullName>
            </value>
            <value>
                <fullName>DLD fees shortfall</fullName>
            </value>
            <value>
                <fullName>Ownership changes</fullName>
            </value>
            <value>
                <fullName>Area changes</fullName>
            </value>
            <value>
                <fullName>Rebate issue</fullName>
            </value>
            <value>
                <fullName>Package promised</fullName>
            </value>
            <value>
                <fullName>Wrong customer details</fullName>
            </value>
            <value>
                <fullName>NOC related for Title Deed</fullName>
            </value>
            <value>
                <fullName>NOC related for Oqood</fullName>
            </value>
            <value>
                <fullName>Non RERA registered</fullName>
            </value>
            <value>
                <fullName>Document issue</fullName>
            </value>
            <value>
                <fullName>Payment related (NOC, service charge, dues)</fullName>
            </value>
            <value>
                <fullName>Resale update in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>